--- a/GT_WarmUp_iOS/Base.lproj/Main.storyboard
+++ b/GT_WarmUp_iOS/Base.lproj/Main.storyboard
@@ -6,7 +6,7 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Favourite View Controller-->
+        <!--Favourite-->
         <scene sceneID="4Kd-f6-td2">
             <objects>
                 <viewController id="xGj-rb-1fb" customClass="WUXFavouriteViewController" sceneMemberID="viewController">
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1u4-9V-OGI">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1u4-9V-OGI">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -29,10 +29,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="xHF-CM-9sy" kind="push" id="eRK-6h-eKM"/>
+                                            <segue destination="xHF-CM-9sy" kind="push" identifier="FAV_PHOTO_DETAIL" id="eRK-6h-eKM"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="xGj-rb-1fb" id="HQy-Am-f63"/>
+                                    <outlet property="delegate" destination="xGj-rb-1fb" id="Kjt-cY-Yef"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -43,13 +47,16 @@
                             <constraint firstAttribute="trailingMargin" secondItem="1u4-9V-OGI" secondAttribute="trailing" constant="-16" id="zKK-LQ-pYC"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="favorites" id="tGs-nK-hKI"/>
+                    <navigationItem key="navigationItem" title="Favourite" id="VNq-hi-488"/>
+                    <connections>
+                        <outlet property="tableView" destination="1u4-9V-OGI" id="3pX-ZQ-tkz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W6i-BS-s2A" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-47" y="1053"/>
+            <point key="canvasLocation" x="485" y="1053"/>
         </scene>
-        <!--Album View Controller-->
+        <!--Album-->
         <scene sceneID="JlP-7Q-H6Q">
             <objects>
                 <viewController id="dTb-Rn-mmP" customClass="WUXAlbumViewController" sceneMemberID="viewController">
@@ -122,7 +129,7 @@
                             <constraint firstItem="R2Z-vI-rWJ" firstAttribute="leading" secondItem="2LP-TD-bBJ" secondAttribute="leading" id="yij-c2-goa"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Q6z-HS-0Mb"/>
+                    <navigationItem key="navigationItem" title="Album" id="Q6z-HS-0Mb"/>
                     <connections>
                         <outlet property="collectionView" destination="R2Z-vI-rWJ" id="0fj-Y0-QCV"/>
                     </connections>
@@ -165,7 +172,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0HC-nC-B3U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="782" y="1053"/>
+            <point key="canvasLocation" x="1314" y="1053"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="iFv-0h-1WJ">
@@ -313,7 +320,7 @@
                     <connections>
                         <segue destination="zHL-Jn-aJX" kind="relationship" relationship="viewControllers" id="E0X-83-2ek"/>
                         <segue destination="wp0-Rq-nO6" kind="relationship" relationship="viewControllers" id="8qU-B3-jLl"/>
-                        <segue destination="xGj-rb-1fb" kind="relationship" relationship="viewControllers" id="iEH-Xq-e4b"/>
+                        <segue destination="uAU-u6-qHK" kind="relationship" relationship="viewControllers" id="iEH-Xq-e4b"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eVg-eF-Fwo" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -338,6 +345,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5cz-yn-dLw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="378.13333333333333" y="399.49333333333334"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="n6F-7j-OBp">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uAU-u6-qHK" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="tGs-nK-hKI"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="EVN-II-4t8">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="xGj-rb-1fb" kind="relationship" relationship="rootViewController" id="8AY-an-Pbe"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5gG-wD-k5F" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-47" y="1053"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
